// 客户端需要引用包
// package wing.net.msg;

option optimize_for = SPEED;
package msg;

// 消息实体
enum enMessageFE
{
	FE_TIMER					= 0;	// 内部消息（定时器）
	FE_CLIENT					= 1;	// 客户端
	FE_GAMESERVER		= 2;	// 场景服务器
	FE_LOGINSERVER		= 3;	// 登陆服务器
	FE_DBSERVER				= 4; 	// 数据服务器
	FE_PROXYSERVER		= 5;	// 代理服务器
	FE_WORLDSERVER	= 6;	// 世界服务器
	FE_WEBSERVER			= 7;	// 平台服务器
};

// 客户端与服务器之间的消息头
message CCSHead
{
    optional uint32		DialogID	= 1[default = 0];	// 会话ID
    optional uint64		TeamID		= 2;				// 战队ID
    optional uint32		EntityID	= 3;				// 实体ID
	optional int64		TimeStamp	= 4[default = 0];	// 时间戳
};


// 消息头( server -> client 可以只填messageid, 但 client -> server 必须全填)
message CMessageHead
{
	required uint32 MessageID	= 1[default = 0]; 	// 消息ID
};

// 单个消息
message CMessage
{
	required CMessageHead	MsgHead = 1;				// 消息头+
	optional fixed64		MsgPara = 2[default = 0];	// 消息体( 指针 4bytes ) 消息传递时是无效的，这是服务器内部自己赋值的，方便获取消息
};

// 消息集合(与客户端约定：服务器给客户端下发消息时需要放入消息集合，但客户端上行服务器不需要)
message CMessageSet
{
	repeated bytes	MsgParas = 1;	// 消息集合(每一个bytes组成[总长度：CMessageHead长度：CMessageHead：MsgPara长度：MsgPara])
};

